--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
       android:layout_weight="6"
       app:initialColor="@color/colorPrimary"
       app:preferenceName="Test2"
-      app:selector="@drawable/wheel" />
+      app:selector="@drawable/sliding_block" />
 
     <LinearLayout
       android:layout_width="match_parent"
@@ -70,7 +70,7 @@
         android:layout_gravity="center"
         app:borderColor_AlphaSlideBar="@android:color/darker_gray"
         app:borderSize_AlphaSlideBar="5"
-        app:selector_AlphaSlideBar="@drawable/wheel" />
+        app:selector_AlphaSlideBar="@drawable/sliding_block" />
     </LinearLayout>
 
     <LinearLayout
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         app:borderColor_BrightnessSlider="@android:color/darker_gray"
         app:borderSize_BrightnessSlider="5"
-        app:selector_BrightnessSlider="@drawable/wheel" />
+        app:selector_BrightnessSlider="@drawable/sliding_block" />
     </LinearLayout>
 
     <LinearLayout
